fix layout issue
- fix odd space on top of the screen

--- a/_sass/cevi_zh11/_base.scss
+++ b/_sass/cevi_zh11/_base.scss
@@ -75,7 +75,7 @@ main, .news-feed-container {
     margin: 25px 0 15px;
   }
 
-  p {
+  p, span {
     color: $font-color;
     line-height: 1.5em;
   }
